<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    >
    <LinearLayout
        android:id="@+id/fields"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/Username_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/username"
            android:layout_weight="20"
            android:text="@string/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/edit"
            android:layout_weight="80"
            android:hint="@string/EditPlaceholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
        </LinearLayout>

    <LinearLayout
        android:id="@+id/Password_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/password"
            android:layout_weight="20"
            android:text="@string/Password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/Password_Edit"
            android:layout_weight="80"
            android:hint="@string/PasswordPlaceholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Confirm_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/Confirm"
            android:layout_weight="20"
            android:text="@string/Confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/Confirm_Edit"
            android:layout_weight="80"
            android:hint="@string/ConfirmPlaceholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:text="@string/Submit"
        android:layout_below="@id/fields"
        android:layout_alignRight="@id/fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</RelativeLayout>
